:bug: Agora a lista de produtos é salva na tabela `produtos` no db